[package]
name = "cortex"
version = "3.0.0"
edition = "2024"
authors = ["Nima Naseri <nerdnull@proton.me>"]
description = "A secure password manager with hardware-backed encryption"

[dependencies]
blake3 = "1.5"
bincode = "1.3"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
copypasta = "0.10"
dirs = "5.0"
fs2 = "0.4"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sysinfo = "0.30"
zeroize = "1.7"
regex = "1.11"
toml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true